Highlight LHQ-SVC

--- a/Models/SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/SVC/2024.09.13_LHQ-SVC.md
@@ -29,10 +29,10 @@
 
 Singing Voice Conversion (SVC) has emerged as a significant subfield of Voice Conversion (VC), enabling the transformation of one singer's voice into another while preserving musical elements such as melody, rhythm, and timbre.
 Traditional SVC methods have limitations in terms of audio quality, data requirements, and computational complexity.
-In this paper, we propose LHQ-SVC, a lightweight, CPU-compatible model based on the SVC framework and diffusion model, designed to reduce model size and computational demand without sacrificing performance.
+In this paper, we propose ***LHQ-SVC***, a lightweight, CPU-compatible model based on the SVC framework and diffusion model, designed to reduce model size and computational demand without sacrificing performance.
 We incorporate features to improve inference quality, and optimize for CPU execution by using performance tuning tools and parallel computing frameworks.
-Our experiments demonstrate that LHQ-SVC maintains competitive performance, with significant improvements in processing speed and efficiency across different devices.
-The results suggest that LHQ-SVC can meet real-time performance requirements, even in resource-constrained environments.
+Our experiments demonstrate that ***LHQ-SVC*** maintains competitive performance, with significant improvements in processing speed and efficiency across different devices.
+The results suggest that ***LHQ-SVC*** can meet real-time performance requirements, even in resource-constrained environments.
 
 ## 1·Introduction: 引言
 
@@ -56,12 +56,12 @@ Compared to traditional generative models, diffusion models better preserve the 
 However, most existing diffusion-based SVC models employ a black-box structure, lacking intuitive interpretability and control over the generation process.
 This presents new challenges in optimizing and improving these models.
 
-To address these challenges, this paper proposes a novel approach called The innovation of this study lies in the development of LHQ-SVC, a lightweight and CPU-optimized Singing Voice Conversion model.
-Unlike previous models that rely on GPU-heavy computations, LHQ-SVC is designed to run efficiently on CPUs while maintaining high-quality audio conversion.
+To address these challenges, this paper proposes a novel approach called The innovation of this study lies in the development of ***LHQ-SVC***, a lightweight and CPU-optimized Singing Voice Conversion model.
+Unlike previous models that rely on GPU-heavy computations, ***LHQ-SVC*** is designed to run efficiently on CPUs while maintaining high-quality audio conversion.
 Key innovations include:
 
-- Model Size Reduction: LHQ-SVC significantly reduces the model size without compromising performance, making it suitable for deployment on devices with limited computational resources.
-- CPU Optimization: By converting GPU-centric code to CPU-compatible operations and leveraging optimization libraries such as Intel MKL and OpenMP, LHQ-SVC achieves efficient parallel processing on multi-core CPUs.
+- Model Size Reduction: ***LHQ-SVC*** significantly reduces the model size without compromising performance, making it suitable for deployment on devices with limited computational resources.
+- CPU Optimization: By converting GPU-centric code to CPU-compatible operations and leveraging optimization libraries such as Intel MKL and OpenMP, ***LHQ-SVC*** achieves efficient parallel processing on multi-core CPUs.
 - Improved Sampling Mechanism: We optimize the diffusion process by reducing the number of steps required in the conversion, enabling faster inference while maintaining high-quality results.
 
 ## 2·Related Works: 相关工作
@@ -96,14 +96,14 @@ However, key challenges remain, including improving model efficiency, stability,
 
 ## 3·Methodology: 方法
 
-We propose a new model, LHQ-SVC, designed to significantly improve performance and reduce the model size while maintaining high accuracy, so that it can efficiently run on CPUs.
-The LHQ-SVC model focuses on optimising CPU execution, in contrast to the traditionally GPU-optimised code which relies heavily on parallel computation.
+We propose a new model, ***LHQ-SVC***, designed to significantly improve performance and reduce the model size while maintaining high accuracy, so that it can efficiently run on CPUs.
+The ***LHQ-SVC*** model focuses on optimising CPU execution, in contrast to the traditionally GPU-optimised code which relies heavily on parallel computation.
 
 While CPUs have fewer cores compared to GPUs, their multi-core nature still allows for parallelism, albeit to a lesser extent.
 Using parallel frameworks like OpenMP or Intel Threading Building Blocks (TBB) can enable efficient multi-threaded programming, maximizing the CPU's multi-core capabilities.
 CPU performance tuning tools like Intel VTune Profiler can be used to identify performance bottlenecks, particularly in hotspot areas of code, such as I/O operations, memory access patterns, and cache management.
 Optimising these areas contributes to improving computational efficiency.
-In the training phase of LHQ-SVC, once robust training reaches a certain number of iterations, the network undergoes evaluation.
+In the training phase of ***LHQ-SVC***, once robust training reaches a certain number of iterations, the network undergoes evaluation.
 Specifically, the performance metric, calculated as the ratio of the CLIP score to latency change before and after removing specific modules, is used to determine which parts of the model should be retained or removed.
 If the network's latency exceeds the target, modules that contribute to latency but not performance are removed.
 In contrast, modules with the highest performance contribution are duplicated to further strengthen the network's structure.
@@ -221,25 +221,25 @@ The batch size was set to 48, and the learning rates were 1e-4 and 5e-5, using t
 We first conducted reconstruction experiments to evaluate the capability of different decoding phases in the autoencoder setup.
 Following this, we conducted two sets of experiments on the target singer’s dataset to fine-tune the model.
 
-Additionally, we incorporated sampling steps for LHQ-SVC to assess the impact of different sampling methods on the quality of voice conversion.
+Additionally, we incorporated sampling steps for ***LHQ-SVC*** to assess the impact of different sampling methods on the quality of voice conversion.
 Conversion experiments were performed to evaluate the effect of these sampling steps on the overall conversion quality.
 
 ## 5·Results: 结果
 
-The performance of LHQ-SVC, along with several baseline models, is summarized in Table~\ref{tab1}.
-The results for LHQ-SVC and LHQ-SVC$_{mobile}$ stand out due to their lightweight nature and performance efficiency, especially for mobile device applications.
-LHQ-SVC, with a model size of 67.89 MB, achieves impressive results across multiple metrics, including the highest PESQ score of 3.02, and a Naturalness MOS of 4.02, which is the best among all models compared.
-These results indicate that LHQ-SVC excels in generating high-quality singing voice conversions while maintaining a relatively small model size.
-On the other hand, LHQ-SVC$_{mobile}$ is an even more compact version, with a model size of only 53 MB, optimized for mobile platforms.
-Although it shows slightly lower performance in terms of STOI and PESQ compared to LHQ-SVC, it still provides competitive results, especially in terms of Similarity MOS with a score of 3.91, making it a viable choice for lightweight applications requiring fast and efficient voice conversion on mobile devices.
-The balance between the performance and model size makes both LHQ-SVC and LHQ-SVC$_{mobile}$ particularly appealing for practical use, as they deliver strong results in Naturalness MOS and Similarity MOS while being resource-efficient.
+The performance of ***LHQ-SVC***, along with several baseline models, is summarized in Table~\ref{tab1}.
+The results for ***LHQ-SVC*** and ***LHQ-SVC***$_{mobile}$ stand out due to their lightweight nature and performance efficiency, especially for mobile device applications.
+***LHQ-SVC***, with a model size of 67.89 MB, achieves impressive results across multiple metrics, including the highest PESQ score of 3.02, and a Naturalness MOS of 4.02, which is the best among all models compared.
+These results indicate that ***LHQ-SVC*** excels in generating high-quality singing voice conversions while maintaining a relatively small model size.
+On the other hand, ***LHQ-SVC***$_{mobile}$ is an even more compact version, with a model size of only 53 MB, optimized for mobile platforms.
+Although it shows slightly lower performance in terms of STOI and PESQ compared to ***LHQ-SVC***, it still provides competitive results, especially in terms of Similarity MOS with a score of 3.91, making it a viable choice for lightweight applications requiring fast and efficient voice conversion on mobile devices.
+The balance between the performance and model size makes both ***LHQ-SVC*** and ***LHQ-SVC***$_{mobile}$ particularly appealing for practical use, as they deliver strong results in Naturalness MOS and Similarity MOS while being resource-efficient.
 
-In order to verify that our LHQ-SVC is efficient enough, we ran it on the Intel Core i7-11370H on the computer side as well as on the Qualcomm Snapdragon 8 Gen3 processor equipped with the Qualcomm Snapdragon 8 Gen3 processor, and the results of the run are shown in the figure~\ref{re1}.
+In order to verify that our ***LHQ-SVC*** is efficient enough, we ran it on the Intel Core i7-11370H on the computer side as well as on the Qualcomm Snapdragon 8 Gen3 processor equipped with the Qualcomm Snapdragon 8 Gen3 processor, and the results of the run are shown in the figure~\ref{re1}.
 As can be seen from the figure~\ref{re1}, after optimization, the processing speed has been greatly improved, in the Intel Core i7 model device reasoning 3min30s audio, the time from 1min (processing timespeed of about 60/210, about 30\% of the original audio time) to about 11s (processing timespeed of about 11/210, about 5.2\% of the original audio time), in the GPU device reasoning even more to about 9s (processing timespeed of about 6/210, about 2.2\% of the original audio time), to achieve the real-time efficient demand., and the inference on the GPU device even reaches about 9s (the processing speed is about 6/210, which is about 2.2\% of the original audio time), which achieves the real-time and high efficiency requirements.
 At the same time, we simplified the algorithm running on a cell phone to run slightly slower than the client on a Qualcomm Snapdragon 8 Gen3, meeting the need for lightweight efficiency.
 
 ## 6·Conclusions: 结论
 
-In this paper, we introduced LHQ-SVC, a novel lightweight Singing Voice Conversion model designed to run efficiently on CPUs while maintaining high-quality voice conversion performance.
+In this paper, we introduced ***LHQ-SVC***, a novel lightweight Singing Voice Conversion model designed to run efficiently on CPUs while maintaining high-quality voice conversion performance.
 Through careful optimization, including the conversion of GPU-specific code and the use of parallel computing frameworks, we reduced the computational demand and model size significantly.
-Experimental results demonstrated that LHQ-SVC achieves competitive performance in terms of intelligibility, perceptual speech quality, and naturalness, while also delivering substantial improvements in processing speed across different hardware platforms.
+Experimental results demonstrated that ***LHQ-SVC*** achieves competitive performance in terms of intelligibility, perceptual speech quality, and naturalness, while also delivering substantial improvements in processing speed across different hardware platforms.
