--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -74,7 +74,7 @@ The high complexity of this model makes it hard to use in embedded devices and i
 VQ-GANs entail a highly involved training pipeline and the existing DDPMs are computationally heavy models.
 This demonstrates the need for a solution that is easy to train, while offering high quality performance at acceptable complexity.
 
-Recently, a new paradigm to train continuous normalizing flows (CNFs) called [conditional flow matching (CFM) [19]](../Diffusion/2022.10.06_Flow_Matching.md) emerged and demonstrated state-of-the-art quality for both image ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) and audio generation ([Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md); [P-Flow [22]](../Flow/P-Flow.md); [VoiceBox [23]](../SpeechLM/2023.06.23_VoiceBox.md)).
+Recently, a new paradigm to train continuous normalizing flows (CNFs) called [conditional flow matching (CFM) [19]](../Diffusion/2022.10.06_Flow_Matching.md) emerged and demonstrated state-of-the-art quality for both image ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) and audio generation ([Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md); [P-Flow [22]](../Flow/P-Flow.md); [VoiceBox [23]](../SpeechLM/2023.06.23_VoiceBox.md)).
 This approach offers a simple training pipeline at much lower inference and training costs compared to DDPMs.
 
 In this work, we present the ***Flow Matching Audio Codec (FlowMAC)***, a new audio compression model for low bit rate coding of general audio at $24$ kHz audio based on CFM.
@@ -191,7 +191,7 @@ MSE 和 MAE 损失的和作为输入的梅尔频谱的重构损失.
 <details>
 <summary>展开原文</summary>
 
-The CFM architecture follows [Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md) and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snake beta activations ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+The CFM architecture follows [Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md) and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snake beta activations ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
 Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a [Mish activation [25]](../../Modules/Activation/2019.08.23_Mish.md), after which a 1$\times$1 convolutional layer creates the final output.
 The corresponding time-step embeddings use a RoPE-Embedding as in [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 
@@ -211,7 +211,7 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 </details>
 <br>
 
-条件流匹配架构遵循 [Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md), 使用残差 1D 卷积块和 Snake Beta 激活的 Transformer 块 ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+条件流匹配架构遵循 [Matcha-TTS [21]](../Diffusion/2023.09.06_Matcha-TTS.md), 使用残差 1D 卷积块和 Snake Beta 激活的 Transformer 块 ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
 最后, U-Net 的输出经过由一维卷积, 组归一化和 [Mish [25]](../../Modules/Activation/2019.08.23_Mish.md) 激活函数组成的一维模块, 然后通过 $1\times 1$ 卷积层生成最终输出.
 对应的时间步嵌入则和 [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) 中相同使用旋转嵌入.
 
