--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -63,7 +63,6 @@ We release all code and checkpoints to promote community development ([Github](h
 <details>
 <summary>展开原文</summary>
 
-
 Recent research in Text-to-Speech (TTS) has experienced great advancement ([Tacotron2 [1]](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [Transformer-TTS [2]](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech 2 [3]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [Glow-TTS [4]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [VITS [5]](../E2E/2021.06.11_VITS.md); [Grad-TTS [6]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [VioLA [7]](../SpeechLM/2023.05.25_VioLA.md); [NaturalSpeech [8]](../E2E/2022.05.09_NaturalSpeech.md)).
 With a few seconds of audio prompt, current TTS models are able to synthesize speech for any given text and mimic the speaker of audio prompt ([VALL-E [9]](../SpeechLM/2023.01.05_VALL-E.md); [VALL-E X [10]](../SpeechLM/2023.03.07_VALL-E_X.md)).
 The synthesized speech can achieve high fidelity and naturalness that they are almost indistinguishable from human speech ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md); [VALL-E 2 [13]](../SpeechLM/2024.06.08_VALL-E_2.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
@@ -134,6 +133,9 @@ This approach can be seamlessly integrated into existing flow matching based mod
 
 ### 2.1·Flow Matching: 流匹配
 
+<details>
+<summary>展开原文</summary>
+
 The Flow Matching (FM) objective is to match a probability path $p_t$ from a simple distribution $\displaystyle p_0$, e.g., the standard normal distribution $p(x) = \mathcal{N}(x|0,I)$, to $\displaystyle p_1$ approximating the data distribution $q$.
 In short, the FM loss regresses the vector field $u_t$ with a neural network $v_t$ as
 
@@ -163,20 +165,58 @@ $$
 \mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}((1-t)x_0+tx_1) - (x_1-x_0) \| ^2.
 $$
 
-To view in a more general way~\cite{snrtheory}, if formulating the loss in terms of log signal-to-noise ratio (log-SNR) $\lambda$ instead of flow step $t$, and parameterizing to predict $x_0$ ($\epsilon$, commonly stated in diffusion model) instead of predict $x_1-x_0$, the CFM loss is equivalent to the $v$-prediction~\cite{vpredict} loss with cosine schedule.
+To view in a more general way ([VDM++ [43]](2023.09.25_VDM++.md)), if formulating the loss in terms of log signal-to-noise ratio (log-SNR) $\lambda$ instead of flow step $t$, and parameterizing to predict $x_0$ ($\epsilon$, commonly stated in diffusion model) instead of predict $x_1-x_0$, the CFM loss is equivalent to the $v$-prediction ([Salimans et al. (2022) [44]](2022.02.01_Progressive_Distillation.md)) loss with cosine schedule.
 
-For inference, given sampled noise $x_0$ from initial distribution $p_0$, flow step $t\in[0,1]$ and condition with respect to generation task, the ordinary differential equation (ODE) solver~\cite{torchdiffeq} is used to evaluate $\psi_1(x_0)$ the integration of $d\psi_t(x_0)/dt$ with $\psi_0(x_0)=x_0$.
+For inference, given sampled noise $x_0$ from initial distribution $p_0$, flow step $t\in[0,1]$ and condition with respect to generation task, the ordinary differential equation (ODE) solver ([TorchDiffEq [45]](../../OpenSource/Original/TorchDiffEq/Main.md)) is used to evaluate $\psi_1(x_0)$ the integration of $d\psi_t(x_0)/dt$ with $\psi_0(x_0)=x_0$.
 The number of function evaluations (NFE) is the times going through the neural network as we may provide multiple flow step values from 0 to 1 as input to approximate the integration.
 Higher NFE will produce more accurate results and certainly take more calculation time.
 
-### Classifier-Free Guidance
+</details>
+<br>
 
-Classifier Guidance (CG) is proposed by \cite{cg}, functions by adding the gradient of an additional classifier, while such an explicit way to condition the generation process may have several problems.
+流匹配的目标是匹配一个概率路径 $p_t$ 从一个简单的分布 $p_0$, 例如标准正态分布 $p(x) = \mathcal{N}(x|0,I)$, 到 $p_1$ 近似数据分布 $q$.
+简而言之, 流匹配损失通过神经网络 $v_t$ 回归向量场 $u_t$, 即
+
+$$
+\mathcal{L}_{FM}(\theta) = E_{t, p_t(x)} \left\| v_t(x) - u_t(x) \right\| ^2,
+$$
+
+其中 $\theta$ 参数化神经网络, $t \sim \mathcal{U}[0,1]$ 和 $x \sim p_t(x)$.
+模型 $v_t$ 在整个流步骤和数据范围内进行训练, 确保它学习从初始分布到目标分布的整个变换过程.
+
+由于我们没有关于如何近似 $p_t$ 和 $u_t$ 的先验知识, 实际训练中考虑了条件概率路径 $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$, 并且证明了条件Flow Matching (CFM) 损失在 $\theta$ 上具有相同的梯度 ([Flow Matching [32]](2022.10.06_Flow_Matching.md)).
+$x_1$ 是与训练数据对应的随机变量.
+$\mu$ 和 $\sigma$ 是高斯分布的时间依赖均值和标量标准差.
+
+记住, 目标是构建从初始简单分布 (例如高斯噪声) 到目标分布 (数据样本).
+通过条件形式, 流映射 $\psi_t(x)=\sigma_t(x_1)x+\mu_t(x_1)$ 使得所有条件概率路径在开始和结束时分别收敛到 $p_0$ 和 $p_1$, 其中 $\mu_0(x_1)=0$ 和 $\sigma_0(x_1)=1$, $\mu_1(x_1)=x_1$ 和 $\sigma_1(x_1)=0$.
+因此, 流提供了一个向量场 $d\psi_t(x_0)/dt = u_t(\psi_t(x_0)|x_1)$.
+通过重新参数化 $p_t(x|x_1)$ 为 $x_0$, 我们有
+
+$$
+\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}(\psi_t(x_0)) - \frac{d}{dt}\psi_t(x_0) \| ^2.
+$$
+
+进一步利用最优传输形式 $\psi_t(x)=(1-t)x+tx_1$, 我们得到OT-CFM损失,
+
+$$
+\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}((1-t)x_0+tx_1) - (x_1-x_0) \| ^2.
+$$
+
+以更一般的方式来看 ([VDM++ [43]](2023.09.25_VDM++.md)) , 如果以对数信噪比 (log-SNR) $\lambda$ 而不是流步骤 $t$ 来表示损失, 并且参数化以预测 $x_0$ ($\epsilon$, 通常在扩散模型中提到) 而不是预测 $x_1-x_0$, CFM损失等价于 $v$-预测 ([Salimans et al. (2022) [44]](2022.02.01_Progressive_Distillation.md)) 损失, 采用余弦调度.
+
+对于推理, 给定从初始分布 $p_0$ 采样的噪声 $x_0$, 流步骤 $t \in [0,1]$ 和生成任务的条件, 使用常微分方程 (ODE) 求解器 ([TorchDiffEq [45]](../../OpenSource/Original/TorchDiffEq/Main.md)) 来评估 $\psi_1(x_0)$, 即 $d\psi_t(x_0)/dt$ 的积分, 其中 $\psi_0(x_0)=x_0$.
+函数评估次数 (NFE) 是遍历神经网络的次数, 因为我们可能提供从0到1的多个流步骤值作为输入来近似积分.
+更高的NFE将产生更准确的结果, 当然也会花费更多的计算时间.
+
+### 2.2·Classifier-Free Guidance: 无分类器引导
+
+Classifier Guidance (CG) is proposed by [ADM [46]](2021.05.11_ADM.md), functions by adding the gradient of an additional classifier, while such an explicit way to condition the generation process may have several problems.
 Extra training of the classifier is required and the generation result is directly affected by the quality of the classifier.
 Adversarial attacks might also occur as the guidance is introduced through the way of updating the gradient.
 Thus deceptive images with imperceptible details to human eyes may be generated, which are not conditional.
 
-Classifier-Free Guidance (CFG)~\cite{cfg} proposes to replace the explicit classifier with an implicit classifier without directly computing the explicit classifier and its gradient.
+[Classifier-Free Guidance (CFG) [47]](2022.07.26_Classifier-Free_Guidance.md) proposes to replace the explicit classifier with an implicit classifier without directly computing the explicit classifier and its gradient.
 The gradient of a classifier can be expressed as a combination of conditional generation probability and unconditional generation probability.
 By dropping the condition with a certain rate during training, and linear extrapolating the inference outputs with and without condition $c$, the final guided result is obtained.
 We could balance between fidelity and diversity of the generated samples with
@@ -185,8 +225,9 @@ $$
 v_{t,CFG} = v_{t}(\psi_t(x_0),c) + \alpha (v_{t}(\psi_t(x_0),c)-v_{t}(\psi_t(x_0)))
 $$
 
-in CFM case, where $\alpha$ is the CFG strength.\footnote{Note that the inference time will be doubled if CFG.
-Model $v_t$ will execute the forward process twice, once with condition, and once without.}
+in CFM case, where $\alpha$ is the CFG strength.
+(Note that the inference time will be doubled if CFG.)
+(Model $v_t$ will execute the forward process twice, once with condition, and once without.)
 
 ## 3·Methodology: 方法
 
@@ -196,9 +237,9 @@ Based on recent research ([DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [E2 TTS [36
 We adopt a similar pipeline as [E2 TTS [36]](2024.06.26_E2_TTS.md) and propose our advanced architecture ***F5-TTS***, addressing the slow convergence (timbre learned well at an early stage but struggled to learn alignment) and robustness issues (failures on hard case generation) of E2 TTS.
 We also propose a Sway Sampling strategy for flow steps at inference, which significantly improves our model's performance in faithfulness to reference text and speaker similarity.
 
-### 3.1·Pipeline
+### 3.1·Pipeline: 流水线
 
-#### Training
+#### Training: 训练
 
 The infilling task is to predict a segment of speech given its surrounding audio and full text (for both surrounding transcription and the part to generate).
 For simplicity, we reuse the symbol $x$ to denote an audio sample and $y$ the corresponding transcript for a data pair $(x, y)$.
@@ -213,7 +254,7 @@ z = (c_1, c_2, \ldots, c_M, \underbrace{\langle F \rangle, \ldots, \langle F \ra
 $$
 The model is trained to reconstruct $m\odot x_1$ with $(1-m)\odot x_1$ and $z$, which equals to learn the target distribution $p_1$ in form of $P(m\odot x_1|(1-m)\odot x_1,z)$ approximating real data distribution $q$.
 
-#### Inference
+#### Inference: 推理
 
 To generate a speech with the desired content, we have the audio prompt's mel spectrogram features $x_{ref}$, its transcription $y_{ref}$, and a text prompt $y_{gen}$.
 Audio prompt serves to provide speaker characteristics and text prompt is to guide the content of generated speech.
@@ -242,7 +283,7 @@ To alleviate the problem of slow convergence and low robustness, we propose ***F
 Also, an inference-time Sway Sampling is introduced, which allows inference faster (using less NFE) while maintaining performance.
 This sampling way of flow step can be directly applied to other CFM models.
 
-#### Model
+#### Model: 模型
 
 As shown in Fig.\ref{fig:overview}, we use latent [Diffusion Transformer (DiT) [41]](2022.12.19_DiT.md) as backbone.
 To be specific, we use DiT blocks with zero-initialized adaptive Layer Norm (adaLN-zero).
@@ -268,7 +309,7 @@ And for extended character sequence $\hat{y}$, we also add it with an absolute s
 Compared with Voicebox and E2 TTS, we abandoned the U-Net~\cite{unet} style skip connection structure and switched to using DiT with adaLN-zero.
 Without a phoneme-level duration predictor and explicit alignment process, and nor with extra text encoder and semantically infused neural codec model in DiTTo-TTS, we give the text input a little freedom (individual modeling space) to let it prepare itself before concatenation and in-context learning with speech input.
 
-#### Sampling
+#### Sampling: 采样
 
 As stated in Sec.\ref{sec:fm}, the CFM could be viewed as v-prediction with a cosine schedule.
 For image synthesis, [StableDiffusion3 [37]](2024.03.05_StableDiffusion3.md) propose to further schedule the flow step with a single-peak logit-normal~\cite{lognorm} sampling, in order to give more weight to intermediate flow steps by sampling them more frequently.
@@ -290,7 +331,7 @@ With a scale parameter $s<0$, we make model inference more with smaller $t$, thu
 
 ## 4·Experiments: 实验
 
-### Datasets
+### Datasets: 数据集
 
 We utilize the in-the-wild multilingual speech dataset Emilia~\cite{emilia} to train our base models.
 After simply filtering out transcription failure and misclassified language speech, we retain approximately 95K hours of English and Chinese data.
@@ -300,7 +341,7 @@ Three test sets are adopted for evaluation, which are LibriSpeech-PC \textit{tes
 Most of the previous English-only models are evaluated on different subsets of LibriSpeech \textit{test-clean} while the used prompt list is not released, which makes fair comparison difficult.
 Thus we build and release a 4-to-10-second LibriSpeech-PC subset with 1127 samples to facilitate community comparisons.
 
-### Training
+### Training: 训练
 
 Our base models are trained to 1.2M updates with a batch size of 307,200 audio frames (0.91 hours), for over one week on 8 NVIDIA A100 80G GPUs.
 The AdamW optimizer~\cite{adamw} is used with a peak learning rate of 7.5e-5, linearly warmed up for 20K updates, and linearly decays over the rest of the training.
@@ -316,20 +357,20 @@ A random 70\% to 100\% of mel frames is masked for infilling task training.
 For CFG (Sec.\ref{sec:cfg}) training, first the masked speech input is dropped with a rate of 0.3, then the masked speech again but with text input together is dropped with a rate of 0.2.
 We assume that the two-stage control of CFG training may have the model learn more with text alignment.
 
-### Inference
+### Inference: 推理
 
 The inference process is mainly elaborated in Sec.\ref{sec:pipeline}.
 We use the Exponential Moving Averaged (EMA)~\cite{ema} weights for inference, and the Euler ODE solver for ***F5-TTS*** (midpoint for E2 TTS as described in [E2 TTS [36]](2024.06.26_E2_TTS.md)).
 We use the pretrained vocoder Vocos~\cite{vocos} to convert generated log mel spectrograms to audio signals.
 
-### Baselines
+### Baselines: 基线
 
 We compare our models with leading TTS systems including, (mainly)
 - autoregressive models: [VALL-E 2 [13]](../SpeechLM/2024.06.08_VALL-E_2.md), [MELLE [29]](../SpeechLM/2024.07.11_MELLE.md), FireRedTTS~\cite{fireredtts} and CosyVoice~\cite{cosyvoice};
 - non-autoregressive models: [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md), [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md), [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md), MaskGCT~\cite{maskgct}, [Seed-TTS$_{DiT}$ [39]](../SpeechLM/2024.06.04_Seed-TTS.md) and our reproduced [E2 TTS [36]](2024.06.26_E2_TTS.md).
 Details of compared models see Appendix~\ref{appx:baselines}.
 
-### Metrics
+### Metrics: 度量
 
 We measure the performances under \textit{cross-sentence} task.
 The model is given a reference text, a short speech prompt, and its transcription, and made to synthesize a speech reading the reference text mimicking the speech prompt speaker.
@@ -363,8 +404,7 @@ As stated in Sec.\ref{sec:pipeline}, we simply estimate duration based on the ra
 If providing ground truth duration, ***F5-TTS*** with 32 NFE and Sway Sampling will have WER of 1.74 for \textit{test-en} and 1.53 for \textit{test-zh} while maintaining the same SIM, indicating a high upper bound.
 A robustness test on [ELLA-V [15]](../SpeechLM/2024.01.14_ELLA-V.md) hard sentences is further included in Appendix \ref{appx:ellavhardtest}.
 
-### 5.1·Ablation of Model Architecture
-
+### 5.1·Ablation of Model Architecture: 模型架构的消融实验
 
 To clarify our ***F5-TTS***'s efficiency and stress the limitation of E2 TTS.
 We conduct in-depth ablation studies.
@@ -397,7 +437,7 @@ The aforementioned limitations of E2 TTS greatly hinder real-world application a
 Supervised fine-tuning facing out-of-domain data or a tremendous pretraining scale is mandatory for E2 TTS, which is inconvenient for industrial deployment.
 On the contrary, our ***F5-TTS*** better handles zero-shot generation, showing stronger robustness.
 
-### 5.2·Ablation of Sway Sampling
+### 5.2·Ablation of Sway Sampling: 摇摆采样的消融实验
 
 It is clear from Fig.\ref{fig:swaysampling} that a Sway Sampling with a negative $s$ improves the generation results.
 Further with a more negative $s$, models achieve lower WER and higher SIM scores.
