--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -257,11 +257,26 @@ $$
 
 ## 3·Methodology: 方法
 
+<details>
+<summary>展开原文</summary>
+
 This work aims to build a high-level text-to-speech synthesis system.
 We trained our model on the text-guided speech-infilling task ([A^3T [48]](../Speech_Representaion/2022.03.18_A^3T.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
 Based on recent research ([DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [E2 TTS [36]](2024.06.26_E2_TTS.md); [E1 TTS [49]](2024.09.14_E1_TTS.md)), it is promising to train without phoneme-level duration predictor and can achieve higher naturalness in zero-shot generation deprecating explicit phoneme-level alignment.
 We adopt a similar pipeline as [E2 TTS [36]](2024.06.26_E2_TTS.md) and propose our advanced architecture ***F5-TTS***, addressing the slow convergence (timbre learned well at an early stage but struggled to learn alignment) and robustness issues (failures on hard case generation) of E2 TTS.
 We also propose a Sway Sampling strategy for flow steps at inference, which significantly improves our model's performance in faithfulness to reference text and speaker similarity.
+
+</details>
+<br>
+
+本工作旨在构建一个高级的文本转语音合成系统.
+我们在文本引导的语音填充任务上训练我们的模型 ([A^3T [48]](../Speech_Representaion/2022.03.18_A^3T.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
+
+基于近期的研究 ([DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [E2 TTS [36]](2024.06.26_E2_TTS.md); [E1 TTS [49]](2024.09.14_E1_TTS.md)), 有望在没有音素级别的时长预测器的情况下训练, 并在零样本生成中实现更高的自然度, 摒弃显式的音素级别对齐.
+
+我们采用了与 [E2 TTS [36]](2024.06.26_E2_TTS.md) 类似的流水线, 提出了我们的先进架构 ***F5-TTS***, 解决了 E2 TTS 的缓慢收敛 (颤音在早期阶段学得很好, 但学会对齐却遇到了困难) 和健壮性问题 (在困难的生成案例上失败).
+
+我们还提出了一种在推理时用于流步骤的**摇摆采样 (Sway Sampling)**策略, 这显著提高了模型在真实文本和说话者相似性方面的性能.
 
 ### 3.1·Pipeline: 流水线
 
