--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -378,10 +378,22 @@ $$
 
 ### 3.2·F5-TTS
 
-E2 TTS directly concatenates the padded character sequence with input speech, thus deeply entangling semantic and acoustic features with a large length gap of effective information, which is the underlying cause of hard training and poses several problems in a zero-shot scenario (Sec.\ref{sec:modelarchitecture}).
+<details>
+<summary>展开原文</summary>
+
+E2 TTS directly concatenates the padded character sequence with input speech, thus deeply entangling semantic and acoustic features with a large length gap of effective information, which is the underlying cause of hard training and poses several problems in a zero-shot scenario ([Sec.5.1](#sec:modelarchitecture)).
 To alleviate the problem of slow convergence and low robustness, we propose ***F5-TTS*** which accelerates training and inference and shows a strong robustness in generation.
 Also, an inference-time Sway Sampling is introduced, which allows inference faster (using less NFE) while maintaining performance.
 This sampling way of flow step can be directly applied to other CFM models.
+
+</details>
+<br>
+
+E2 TTS 直接将填充后的字符序列和输入语音拼接, 因此在有效信息长度差距较大时深度耦合语义和声学特征, 这是训练困难的底层原因, 并在零样本场景下带来几个问题 ([Sec.5.1](#sec:modelarchitecture)).
+为了缓解缓慢收敛和低鲁棒性问题, 我们提出了 ***F5-TTS*** 算法, 它加速了训练和推理, 并在生成中显示出强大的鲁棒性.
+
+此外, 引入了推理时摇摆采样, 它允许推理更快 (使用更少的 NFE) 而保持性能.
+这种流步骤的采样方式可以直接应用于其他 CFM 模型.
 
 #### Model: 模型
 
@@ -505,6 +517,8 @@ If providing ground truth duration, ***F5-TTS*** with 32 NFE and Sway Sampling w
 A robustness test on [ELLA-V [15]](../SpeechLM/2024.01.14_ELLA-V.md) hard sentences is further included in Appendix \ref{appx:ellavhardtest}.
 
 ### 5.1·Ablation of Model Architecture: 模型架构的消融实验
+
+<a id="sec:modelarchitecture"></a>
 
 To clarify our ***F5-TTS***'s efficiency and stress the limitation of E2 TTS.
 We conduct in-depth ablation studies.
