--- a/Models/SpeechRepresentation/2024.10.17_DART.md
+++ b/Models/SpeechRepresentation/2024.10.17_DART.md
@@ -15,7 +15,7 @@
   - [Github](https://github.com/amaai-lab/DART)
   - [Demo](https://amaai-lab.github.io/DART/)
 - 文件:
-  - [ArXiv] #TODO
+  - [ArXiv](_PDF/2410.13342v1__DART__Disentanglement_of_Accent_and_Speaker_Representation_in_Multispeaker_Text-to-Speech.pdf)
   - [Publication] #TODO
 
 </details>
