--- a/Models/SpeechRepresentation/2024.06.14_MMM.md
+++ b/Models/SpeechRepresentation/2024.06.14_MMM.md
@@ -29,3 +29,15 @@ However, while discrete units have shown effectiveness compared to spectral feat
 In this work, we propose ***MMM***, a ***Multi-layer Multi-residual Multi-stream discrete units extraction method from SSL***.
 Specifically, we introduce iterative residual vector quantization with K-means for different layers in an SSL model to extract multi-stream speech discrete representation.
 Through extensive experiments in speech recognition, speech resynthesis, and text-to-speech, we demonstrate the proposed MMM can surpass or on-par with neural codec's performance under various conditions.
+
+## 1·Introduction: 引言
+
+## 2·Related Works: 相关工作
+
+## 3·Methodology: 方法
+
+## 4·Experiments: 实验
+
+## 5·Results: 结果
+
+## 6·Conclusions: 结论
