--- a/Models/SpeechRepresentation/2024.09.05_LAST.md
+++ b/Models/SpeechRepresentation/2024.09.05_LAST.md
@@ -13,7 +13,7 @@
   - [Github]()
   - [Demo]()
 - 文件:
-  - [ArXiv] #TODO
+  - [ArXiv](_PDF/2409.03701v1__LAST__Language_Model_Aware_Speech_Tokenization.pdf)
   - [Publication] #TODO
 
 </details>
