--- a/Models/SpeechLM/2024.06.06_Small-E.md
+++ b/Models/SpeechLM/2024.06.06_Small-E.md
@@ -32,7 +32,7 @@ Consequently our architecture can be efficiently trained on long samples and ach
 
 ### 1.1·Context & Related Works
 
-Over the recent years, neural text-to-speech synthesis (TTS) has gained spectacular improvements in terms of quality with a diversity of approaches and paradigms ([2019.05.22_FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), [2021.06.11_VITS](../E2E/2021.06.11_VITS.md); [2023.06.23_VoiceBox](2023.06.23_VoiceBox.md), [2023.09.10_VoiceFlow](../Flow/2023.09.10_VoiceFlow.md)).
+Over the recent years, neural text-to-speech synthesis (TTS) has gained spectacular improvements in terms of quality with a diversity of approaches and paradigms ([2019.05.22_FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), [2021.06.11_VITS](../E2E/2021.06.11_VITS.md); [2023.06.23_VoiceBox](2023.06.23_VoiceBox.md), [2023.09.10_VoiceFlow](../Diffusion/2023.09.10_VoiceFlow.md)).
 In particular, discrete speech and audio representations allowed immediate use of well-established decoder-only transformers such as GPT [5] in many state-of-the-art text-to-audio and text-to-speech model.
 However, transformers rely on the self-attention “time-mixing”[6] operation which can be efficiently trained in parallel but suffers from quadratic complexity with respect to the sequence length.
 The challenge of designing sequence modeling architecture that can compete with transformers has sparked a resurgence in research on recurrent neural networks (RNNs).
