add FreeCodec result

--- a/Models/SpeechCodec/2024.12.02_FreeCodec.md
+++ b/Models/SpeechCodec/2024.12.02_FreeCodec.md
@@ -189,4 +189,27 @@ F0-PCC is the Pearson correlation coefficient used to evaluate ${f}_{0}$ consist
 
 ## 5·Results: 结果
 
+### A.Reconstruction Quality
+
+Table \ref{speech} summarizes the results of objective reconstruction experiments.
+The FreeCodec-v1 performs best in almost all objective metrics in test sets.
+Especially in out-of-domain environments, our proposed method achieves the best reconstruction performance using only approximately 57 tokens per second.
+Compared to the FreeCodec-v2, the FreeCodec-v1 is better especially in speaker similarity.
+It shows that the continuous global representation is more effective in reconstruction scenarios.
+Although slightly lower STOI and SECS than DAC at 1 kbps, FreeCodec-v2 gets better objective speech quality according to UTMOS and WARP-Q.
+The same result can also be concluded in subjective evaluation, as illustrated in Fig. \ref{fig:mushra}.
+In addition, FreeCodec-v2 achieves higher quality than Lyra-v2 at 3.2 kbps, EnCodec at 3 kbps, and TiCodec at 1 kbps.
+It demonstrates that the more-grained disentanglement framework leads to lower bitrate but higher reconstruction quality.
+
+Furthermore, we also conducted an ablation study to validate the explicit effect of content loss in the content encoder.
+It can be observed that removing the content loss causes the performance drop in all objective metrics, especially the UTMOS and STOI.
+
+### B.Disentanglement ability
+
+In this section, we describe the disentanglement ability on the voice conversion experiments.
+FreeCodec-v3 achieves voice conversion by using the speaker information from the target speech.
+As shown in Table \ref{vc}, the FreeCodec-v3 achieves lower WER and CER than all baseline models, especially the text-based models.
+Meanwhile, the F0 PCC and speaker similarity of FreeCodec-v3 is also the highest.
+This indicates that our proposed method achieves superior disentanglement in intrinsic attributes of human speech.
+
 ## 6·Conclusions: 结论
