add FreeCodec end

--- a/Models/SpeechCodec/2024.12.02_FreeCodec.md
+++ b/Models/SpeechCodec/2024.12.02_FreeCodec.md
@@ -213,3 +213,8 @@ Meanwhile, the F0 PCC and speaker similarity of FreeCodec-v3 is also the highest
 This indicates that our proposed method achieves superior disentanglement in intrinsic attributes of human speech.
 
 ## 6·Conclusions: 结论
+
+In this paper, we propose a more grained disentanglement framework that factorizes speech into the intrinsic attributes in a self-supervised manner.
+We show that a more-grained disentanglement framework can be used in reconstruction and disentanglement scenarios by different training strategies.
+Compared to existing methods, we use fewer tokens and lower bandwidth to achieve high-quality reconstruction.
+Our experiments show a significant improvement over existing methods, highlighting the effectiveness of our approach in reconstruction quality and disentanglement ability.
