--- a/Models/SpeechCodec/2023.05.04_HiFi-Codec.md
+++ b/Models/SpeechCodec/2023.05.04_HiFi-Codec.md
@@ -3,44 +3,29 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: HiFi-Codec: Group-residual Vector quantization for High Fidelity Audio Codec
+- 标题: "HiFi-Codec: Group-residual Vector quantization for High Fidelity Audio Codec"
 - 作者:
-  - 01. 杨东超 (Dongchao Yang) - 北京大学
-  - 02. Songxiang Liu - 腾讯 AI Lab
-  - 03. 黄融杰 (Rongjie Huang) - 浙江大学
-  - 04. Jinchuan Tian - 北京大学
-  - 05. Chao Weng - 腾讯 AI Lab
-  - 06. Yuexian Zou - 北京大学
-- 机构:
-  - 01. 北京大学 03/06
-  - 02. 腾讯 AI Lab 02/06
-  - 03. 浙江大学 01/06
-- 时间:
-  - 预印时间: 2023.05.04 ArXiv v1
-  - 预印时间: 2023.05.07 ArXiv v2
-  - 更新笔记: 2024.09.05
-- 发表:
-  - 期刊/会议
+  - 01 Dongchao Yang (杨东超, 北京大学)
+  - 02 Songxiang Liu (腾讯 AI Lab)
+  - 03 Rongjie Huang (黄融杰, 浙江大学)
+  - 04 Jinchuan Tian (北京大学)
+  - 05 Chao Weng (腾讯 AI Lab)
+  - 06 Yuexian Zou (北京大学)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2305.02765)
-  - [DOI]()
+  - [Publication]
   - [Github](https://github.com/yangdongchao/AcademiCodec)
-  - [Demo]()
-  - [Scholar](https://scholar.google.com/scholar?cluster=16848014406171770614)
-- 标签:
-- 页数: ?
-- 引用: ?
-- 被引: 56
-- 数据:
-  - ?
-- 对比:
-  - ?
-- 复现:
-  - ?
+  - [Demo]
+- 文件:
+  - [ArXiv](_PDF/2305.02765v2__HiFi-Codec_Group-Residual_Vector_Quantization_for_High_Fidelity_Audio_Codec.pdf)
+  - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
+
+<details>
+<summary>展开原文</summary>
 
 Audio codec models are widely used in audio communication as a crucial technique for compressing audio into discrete representations.
 Nowadays, audio codec models are increasingly utilized in generation fields as intermediate representations.
@@ -52,6 +37,9 @@ We train all the models using publicly available TTS data such as LibriTTS, VCTK
 Our experimental results show that ***HiFi-Codec*** outperforms Encodec in terms of reconstruction performance despite requiring only 4 codebooks.
 To facilitate research in audio codec and generation, we introduce AcademiCodec, the first open-source audio codec toolkit that offers training codes and pre-trained models for Encodec, SoundStream, and ***HiFi-Codec***.
 Code and pre-trained model can be found on: [Github](https://github.com/yangdongchao/AcademiCodec)
+
+</details>
+<br>
 
 音频编解码器模型广泛应用于音频通信中, 是将音频压缩成离散表示的关键技术.
 如今, 音频编解码器模型越来越多地被用作生成领域的中间表示.
@@ -71,14 +59,14 @@ Code and pre-trained model can be found on: [Github](https://github.com/yangdong
 
 代码和预训练模型可在以下链接找到：[Github](https://github.com/yangdongchao/AcademiCodec).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
