--- a/Models/SpeechCodec/2024.06.18_Articulatory_Encodec.md
+++ b/Models/SpeechCodec/2024.06.18_Articulatory_Encodec.md
@@ -16,10 +16,12 @@
   - [Github]
   - [Demo](https://articulatoryencodec.github.io)
 - 文件:
-  - [ArXiv](_PDF/2406.12998v1__Articulatory_Encodec.pdf)
+  - [ArXiv](_PDF/2406.12998v2__Articulatory_Encodec__Vocal_Tract_Kinematics_as_a_Codec_for_Speech.pdf)
   - [Publication] #TODO
 
 </details>
+
+! 当前文档是 [SPARC](2024.10.16_SPARC.md) 的旧版本.
 
 ## Abstract: 摘要
 
@@ -62,7 +64,7 @@ By closing the loop of articulatory encoding and decoding, we propose a novel, s
 We will open-source the code and model checkpoints upon publication.
 The ***articulatory encodec*** shows a minimal loss of intelligibility and quality compared to the original speech audio.
 
-Compared to existing neural coding of speech (choi2021nansy; choi2022nansy++; [SoundStream [20]](2021.07.07_SoundStream.md); [EnCodec [21]](2022.10.24_EnCodec.md); [FACodec [22]](2024.03.05_FACodec.md)), representing speech as articulatory features has following benefits:
+Compared to existing neural coding of speech (choi2021nansy; choi2022nansy++; [SoundStream [20]](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec [21]](../SpeechCodec/2022.10.24_EnCodec.md); [FACodec [22]](../SpeechCodec/2024.03.05_FACodec.md)), representing speech as articulatory features has following benefits:
 
 - **Low-dimensionality**: The articulatory features have only 14 channels with 50 Hz sampling rate.
 This is significantly lower than the previous acoustic features or neural embedding of speech.
@@ -105,7 +107,7 @@ However, to our knowledge, none of the existing approaches has achieved industri
 ### D.Neural Codec of Speech
 
 Many deep learning methods have been proposed to learn data-driven representations of speech.
-Various autoencoder methods have been suggested to jointly train encoders that compress audio into low-bitrate discrete units ([VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [20]](2021.07.07_SoundStream.md); [EnCodec [21]](2022.10.24_EnCodec.md)) or decompose speech into different factors (choi2022nansy++, [SpeechTokenizer [43]](2023.08.31_SpeechTokenizer.md); [FACodec [22]](2024.03.05_FACodec.md)), and decoders that reconstruct speech from encoded features with minimal loss of information.
+Various autoencoder methods have been suggested to jointly train encoders that compress audio into low-bitrate discrete units ([VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [20]](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec [21]](../SpeechCodec/2022.10.24_EnCodec.md)) or decompose speech into different factors (choi2022nansy++, [SpeechTokenizer [43]](2023.08.31_SpeechTokenizer.md); [FACodec [22]](../SpeechCodec/2024.03.05_FACodec.md)), and decoders that reconstruct speech from encoded features with minimal loss of information.
 Also, pretrained speech SSL models have been utilized to extract rich linguistic content of speech, and synthesizers are trained to restore speech audio from those features \cite{choi2021nansy, polyak2021resynthesis, choi2022nansy++,  [HierSpeech [45]](../E2E/2022.11.01_HierSpeech.md); [HierSpeech++ [46]](2023.11.21_HierSpeechpp.md), [QuickVC [47]](../Voice_Conversion/2023.02.23_QuickVC.md)}.
 These SSL-based methods often utilize separate source modeling (e.g., pitch) and speaker encoding, since SSL model encoders tend to marginalize out acoustic and speaker information \cite{chen2022spkinfo, pasad2023comparative}.
 We categorize all these kinds of closed-loop frameworks utilizing neural networks for both encoding and decoding as \emph{neural codecs}.
@@ -131,8 +133,8 @@ Our results show empirical evidence of this claim. %we empirically demonstrate t
 We use the SSL-linear AAI approach proposed by \cite{cho2023evidence, cho2023self}.
 The SSL-linear model is built by training a linear mapping from SSL features to EMA, while keeping the SSL encoder weights frozen.
 This simple mapping can effectively find a linear subspace in the SSL feature space which is highly correlated with EMA, proven by previous probing studies \cite{cho2023evidence,cho2023self}.
-We use the [WavLM [51]](../Speech_Representaion/2021.10.26_WavLM.md) Large model, which shows the highest correlation amongst speech SSL models as reported in \cite{cho2023evidence}.
-Note that the linear head is the only fitted part here, thus, maintaining the generalization capacity of the WavLM encoder that is attained by pretraining on large-scale speech data and adversarial data augmentation ([WavLM [51]](../Speech_Representaion/2021.10.26_WavLM.md)).
+We use the [WavLM [51]](../SpeechRepresentation/2021.10.26_WavLM.md) Large model, which shows the highest correlation amongst speech SSL models as reported in \cite{cho2023evidence}.
+Note that the linear head is the only fitted part here, thus, maintaining the generalization capacity of the WavLM encoder that is attained by pretraining on large-scale speech data and adversarial data augmentation ([WavLM [51]](../SpeechRepresentation/2021.10.26_WavLM.md)).
 Furthermore, the speaker information tends to diminish after a few early layers \cite{chen2022spkinfo}, which indicates the mapping can be speaker-agnostic, further contributing to multi-speaker generalizability.
 
 The original 200 Hz EMA data is downsampled to 50 Hz to match the sampling rate of the SSL features, and z-scored within utterances.
@@ -163,7 +165,7 @@ This speaker identity encoding is indispensable to fully map out multi-speaker s
 
 ### B.Articulatory Synthesis
 
-We adopt [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md) as the vocoder for articulatory synthesis ([HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md); wu2022artsynth, polyak2021resynthesis).
+We adopt [HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.mdocoder for articulatory synthesis ([HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md); wu2022artsynth, polyak2021resynthesis).
 The vocoder is trained to synthesize speech audio with a 16K Hz sampling rate from articulatory features defined in \S\ref{methods:inversion} and \S\ref{methods:source}.
 To condition the generation on the speaker embedding, we apply FiLM \cite{perez2018film} to each convolution module with different receptive fields in the HiFi-GAN architecture, which modulates the output channels of each module.
 We adopt the same loss functions as [HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md): Mel-spectrogram loss for reconstruction and multi-period and multi-scale discriminator loss for GAN training.
