--- a/Models/SpeechCodec/2024.06.11_Single-Codec.md
+++ b/Models/SpeechCodec/2024.06.11_Single-Codec.md
@@ -38,7 +38,7 @@ The effectiveness of Single-Code is further validated by LLM-TTS experiments, sh
 Large language models (LLMs) have attracted wide attention in the speech domain, particularly in text-to-speech synthesis (TTS) ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md)).
 In such LLM-based TTS systems, to operate speech synthesis as a simple next-token prediction problem, the first thing is to seek an appropriate speech codec for speech tokenization and waveform reconstruction.
 Multi-codebook codecs ([EnCodec](../SpeechCodec/2022.10.24_EnCodec.md)), as the SOTA approaches, are widely adopted in LLM-based TTS to achieve superior reconstruction quality.
-However, they also require the LLM to predict multiple discrete sequences, affecting efficiency and stability seriously, although various designs of codec ([SpeechTokenizer](2023.08.31_SpeechTokenizer.md); [Language-Codec](../../Models/Speech_Neural_Codec/2024.02.19_Language-Codec.md); [TiCodec](2023.09.15_TiCodec.md)) and LLM ([SoundStorm](../SpeechLM/2023.05.16_SoundStorm.md); [UniAudio](../SpeechLM/2023.10.01_UniAudio.md); [MAGNeT](../SpeechLM/2024.01.09_MAGNeT.md)) are proposed to adapt this multi-sequence discrete representation better.
+However, they also require the LLM to predict multiple discrete sequences, affecting efficiency and stability seriously, although various designs of codec ([SpeechTokenizer](2023.08.31_SpeechTokenizer.md); [Language-Codec](2024.02.19_Language-Codec.md); [TiCodec](2023.09.15_TiCodec.md)) and LLM ([SoundStorm](../SpeechLM/2023.05.16_SoundStorm.md); [UniAudio](../SpeechLM/2023.10.01_UniAudio.md); [MAGNeT](../SpeechLM/2024.01.09_MAGNeT.md)) are proposed to adapt this multi-sequence discrete representation better.
 Hence, seeking an effective approach to obtain the single-sequence discrete speech representation is critical to bypass this limitation.
 
 However, unlike the text, it is impossible to completely represent the speech audio with abundant information in semantics and acoustics with only one discrete token sequence.
