--- a/Models/SpeechCodec/2024.11.01_MDCTCodec.md
+++ b/Models/SpeechCodec/2024.11.01_MDCTCodec.md
@@ -15,7 +15,7 @@
   - [ArXiv](https://arxiv.org/abs/2411.00464)
   - [Publication]() 2024 IEEE Spoken Language Technology Workshop (SLT2024)
   - [Github]()
-  - [Demo]()
+  - [Demo](https://pb20000090.github.io/MDCTCodecSLT2024/)
 - 文件:
   - [ArXiv](_PDF/2411.00464v1__MDCTCodec__A_Lightweight_MDCT-based_Neural_Audio_Codec_towards_High_Sampling_Rate_and_Low_Bitrate_Scenarios.pdf)
   - [Publication] #TODO
